# sphinx-exec-haskell

./: .gitignore  README.md  README.rst  flake.nix  pyproject.toml  setup.cfg  sphinx-exec-haskell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: 7j011si3zhjk9759pg2q6ppbxk4cxwzl-source  w77a7jsji09ynpn69yb6ifbplwlfpkyn-source
src/sphinxcontrib/sphinx-exec-haskell/: sphinx-exec-haskell.py
