[metadata]
name = sphinx-exec-haskell
url = https://github.com/doyougnu/sphinx-exec-haskell
project_urls =
  GitHub: repo = https://github.com/doyougnu/sphinx-exec-haskell
  GitHub: issues = https://github.com/doyougnu/sphinx-exec-haskell/issues
description = An RST directive for executing arbritrary code for a backend, and then capturing and testing the output.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jeffrey Young
author_email = jeffrey.young@iohk.com
maintainer = Jeffrey Young
maintainer_email = jeffrey.young@iohk.com
license = BSD 3-Clause License
license_files =
  LICENSE
classifiers =
  Development Status :: 3 - Alpha

  Framework :: Sphinx
  Framework :: Sphinx :: Extension

  Intended Audience :: Developers

  License :: OSI Approved :: BSD License

  Operating System :: OS Independent

  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

  Topic :: Software Development :: Documentation

  Topic :: Documentation :: Sphinx
  Topic :: System :: Software Distribution
  Topic :: Utilities

[options]
include_package_data = True
install_requires =
  importlib-metadata >= 4; python_version < '3.8'
  sphinx
package_dir =
  =src
packages = find_namespace:
python_requires = >=3.6
zip_safe = True

[options.packages.find]
where = src
